Prevent logo from overflowing container

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,15 @@ footer p {
   container-type: size;
 }
 
+.innerGameBody .logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .innerGameBody img {
   position: absolute;
   top: 50%;
